Added book content
god smite me now

--- a/todo.txt
+++ b/todo.txt
@@ -13,6 +13,12 @@ HTML/CSS:
 Game:
 ================================
 [2] implement endings (kinda sorta done, need to test)
+
 [3] implement [esc]
-[4] add function to end the game at ANY POINT if the player hits esc
+while writing: skip text, print out exit message
+while choosing an offering: stop countdown, print out exit message
+bookopen: book has to be closed
+[esc] - end the game
+add function to end the game at ANY POINT if the player hits [esc]
+
 [6] write book pages
